--- a/efak-web/src/main/resources/templates/cluster/manage-create.html
+++ b/efak-web/src/main/resources/templates/cluster/manage-create.html
@@ -45,6 +45,7 @@
                                placeholder="Enter Name" th:value="#{kafka.eagle.clusters.manage.create.name.test}"
                                th:placeholder="#{kafka.eagle.clusters.manage.create.name.placeholder}">
                         <input type="hidden" id="efak_cluster_auth_isopen" name="efak_cluster_auth_isopen"/>
+                        <input type="hidden" id="efak_cluster_edit" name="efak_cluster_edit"/>
                     </div>
                     <hr>
 
