--- a/efak-web/src/main/resources/templates/cluster/manage-create.html
+++ b/efak-web/src/main/resources/templates/cluster/manage-create.html
@@ -18,7 +18,7 @@
 <div class="main-wrapper">
 
     <!-- partial:menu -->
-    <div th:replace="public/header :: menu"></div>
+    <div th:replace="public/header :: menu_header"></div>
     <!-- partial -->
 
     <div class="page-wrapper">
