add: dev jmx tools

--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -53,10 +53,10 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-6 col-md-12 col-xl-5">
-                                            <h3 class="mb-2">3,897</h3>
+                                            <h3 class="mb-2">12</h3>
                                             <div class="d-flex align-items-baseline">
                                                 <p class="text-success">
-                                                    <span>+3.3%</span>
+                                                    <span>在线:11</span>
                                                     <i data-feather="arrow-up" class="icon-sm mb-1"></i>
                                                 </p>
                                             </div>
@@ -92,7 +92,7 @@
                                             <h3 class="mb-2">240</h3>
                                             <div class="d-flex align-items-baseline">
                                                 <p class="text-danger">
-                                                    <span>-2.8%</span>
+                                                    <span>空闲:20</span>
                                                     <i data-feather="arrow-down" class="icon-sm mb-1"></i>
                                                 </p>
                                             </div>
@@ -125,10 +125,10 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-6 col-md-12 col-xl-5">
-                                            <h3 class="mb-2">89.87%</h3>
+                                            <h3 class="mb-2">150</h3>
                                             <div class="d-flex align-items-baseline">
                                                 <p class="text-success">
-                                                    <span>+2.8%</span>
+                                                    <span>活跃:10</span>
                                                     <i data-feather="arrow-up" class="icon-sm mb-1"></i>
                                                 </p>
                                             </div>
