--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="navbar-content">
                 <a href="/" class="navbar-brand">
-                    Kafka<span>Eagle</span>
+                    Kafka&nbsp;<span style="font-weight:bold">Eagle</span>
                 </a>
                 <form class="search-form">
                     <div class="input-group">
