--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -443,6 +443,6 @@
 <th:block th:replace="public/common :: js"></th:block>
 <!-- Custom js for this page -->
 <script src="../../assets/js/dashboard-dark.js"></script>
-<script src="../../assets/js/datepicker.js"></script>
+<script th:src="@{../../assets/js/dataspace/dashboard.js}"></script>
 </body>
 </html>    
