add: brokers panel

--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -53,18 +53,28 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-6 col-md-12 col-xl-5">
-                                            <h3 class="mb-2">12</h3>
+                                            <h3 id="efak_dashboard_brokers_panel" class="mb-2">0</h3>
                                             <div class="d-flex align-items-baseline">
                                                 <p class="text-success">
-                                                    <span>在线:11</span>
-                                                    <i data-feather="arrow-up" class="icon-sm mb-1"></i>
+                                                    在线: <span id="efak_dashboard_brokers_onlines_panel">0</span>
+<!--                                                    <i data-feather="airplay" class="icon-sm mb-1"></i>-->
                                                 </p>
                                             </div>
                                         </div>
-                                        <div class="col-6 col-md-12 col-xl-7">
-                                            <div id="customersChart" class="mt-md-3 mt-xl-0"></div>
-
+                                        <div class="col-6 col-md-12 col-xl-5">
+                                            <h3 class="mb-2">Controller</h3>
+                                            <div class="d-flex align-items-baseline">
+                                                <p class="text-success">
+                                                    <span>健康</span>
+                                                    <i data-feather="check-circle" class="icon-sm mb-1"></i>
+                                                </p>
+                                            </div>
                                         </div>
+<!--                                        <div class="col-6 col-md-12 col-xl-7">-->
+                                            <div id="customersChart" style="display: none" class="mt-md-3 mt-xl-0"></div>
+<!--                                            <div id="efak_dashboard1" class="">Controller</div>-->
+<!--                                            <div id="efak_dashboard2" class="">健康度</div>-->
+<!--                                        </div>-->
                                     </div>
                                 </div>
                             </div>
