--- a/efak-web/src/main/resources/templates/public/common.html
+++ b/efak-web/src/main/resources/templates/public/common.html
@@ -21,6 +21,7 @@
     <script src="../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="../../assets/vendors/sweetalert2/sweetalert2.min.js"></script>
     <script src="../../assets/vendors/apexcharts/apexcharts.min.js"></script>
+    <script src="../../assets/vendors/pace/pace.min.js"></script>
     <!-- End plugin js for this page -->
 
     <!-- inject:js -->
@@ -37,6 +38,7 @@
     <link rel="stylesheet" href="../../assets/fonts/feather-font/css/iconfont.css">
     <link rel="stylesheet" href="../../assets/vendors/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="../../assets/vendors/core/core.css">
+    <link rel="stylesheet" href="../../assets/vendors/pace/pace.min.css">
     <link rel="stylesheet" href="../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
     <!-- plugins css end -->
     <!-- core css -->
